--- a/2017-01-25/index.html
+++ b/2017-01-25/index.html
@@ -64,10 +64,10 @@
 
           <table width="75%">
             <tr>
-              <td align="center"><img src="startonbump.png" border="none"/></td>
+              <td align="center"><img src="startonbump.png" border="0" style="border-style: none"//></td>
             </tr>
             <tr>
-            <td align="center"> <img src="sendmessage.png" border=none/><img src="startonmessage.png" border=none/></td>
+            <td align="center"> <img src="sendmessage.png" border="0" style="border-style: none"//><img src="startonmessage.png" border="0" style="border-style: none"//></td>
           </tr>
         </table>
 
@@ -79,7 +79,7 @@
 
 
         <section>
-          <a href = "https://www.scratchjr.org/activities/card08-greet.pdf"><img src="meetandgreet.png" style="width:50vw;"/></a>
+          <a href = "https://www.scratchjr.org/activities/card08-greet.pdf"><img src="meetandgreet.png" style="width:50vw; border-style: none"//></a>
         </section>
 
       </div>
