--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <li><a href="2017-01-11-scratch-disappear">2017-01-11-scratch-disappear</a></li>
       <li><a href="2017-01-18-scratch-story">2017-01-18-scratch-story</a></li>
             <li><a href="2017-01-25">2017-01-25-scratch-messaging</a></li>
+            <li><a href="2017-02-01">2017-02-01-scratch-more-messaging-game</a></li>
 
 
     </ul>
