--- a/2017-02-01/index.html
+++ b/2017-02-01/index.html
@@ -45,41 +45,30 @@
 	</section>
 
         <section>
-          <h2>Last week:</h2>
-          <h2>Make characters talk</h2>
-          <h2>to each other</h2>
-          <h3>in Scratch Jr</h3>
+          <h3>Last week:</h3>
+          <h2>Bumping</h2>
+          <h3>and</h3>
+          <h2>Messaging</h2>
         </section>
-
 
         <section>
-          <h2>This week:</h2>
-          <h2>Use messaging to</h2>
-          <h2>control a character</h2>
-          <h3>in Scratch Jr</h3>
+          <h3>This week:</h3>
+          <h2>Movement with</h2>
+          <h2>Messaging</h2>
         </section>
 
-    <section>
-          <h2>New blocks this week</h2>
-
-          <table width="75%">
-            <tr>
-              <td align="center"><img src="ontap.png" border="0" style="border-style: none"//></td>
-            </tr>
-            <tr>
-            <td align="center"> <img src="messages.png" border="0" style="border-style: none"//></td>
-          </tr>
-        </table>
-
+        <section>
+          <h2>New blocks</h2>
+          <img src="ontap.png" border="0" style="border-style: none"/>
+          <br/>
+          <img src="messages.png" border="0" style="border-style: none"/>
         </section>
 
         <section>
           <h2>Let's try it!</h2>
-          <h2>Tap one "character"</h2>
-          <h2>to make another character move</h2>
-
+          <h3>Tap one "character"</h3>
+          <h3>Make another character move</h3>
         </section>
-
 
       </div>
     </div>
