2017-02-08 scratch game obstacles

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
       <li><a href="2017-01-03-scratch">2017-01-03-scratch</a></li>
       <li><a href="2017-01-11-scratch-disappear">2017-01-11-scratch-disappear</a></li>
       <li><a href="2017-01-18-scratch-story">2017-01-18-scratch-story</a></li>
-            <li><a href="2017-01-25">2017-01-25-scratch-messaging</a></li>
-            <li><a href="2017-02-01">2017-02-01-scratch-more-messaging-game</a></li>
-
-
+      <li><a href="2017-01-25">2017-01-25 scratch messaging</a></li>
+      <li><a href="2017-02-01">2017-02-01 scratch more messaging game</a></li>
+      <li><a href="2017-02-08">2017-02-08 scratch game obstacles</a></li>
     </ul>
 
     <h2>2015-2016</h2>
