--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <li><a href="2017-01-25">2017-01-25 scratch messaging</a></li>
       <li><a href="2017-02-01">2017-02-01 scratch more messaging game</a></li>
       <li><a href="2017-02-08">2017-02-08 scratch game obstacles</a></li>
+            <li><a href="2017-04-12">2017-04-12 hopscotch</a></li>
     </ul>
 
     <h2>2015-2016</h2>
