--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <li><a href="2017-01-25">2017-01-25 scratch messaging</a></li>
       <li><a href="2017-02-01">2017-02-01 scratch more messaging game</a></li>
       <li><a href="2017-02-08">2017-02-08 scratch game obstacles</a></li>
-            <li><a href="2017-04-12">2017-04-12 hopscotch</a></li>
+      <li><a href="2017-04-12">2017-04-12 hopscotch</a></li>
+      <li><a href="2017-04-26-hopscotch-square">2017-04-12 hopscotch square</a></li>
     </ul>
 
     <h2>2015-2016</h2>
