--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <li><a href="2017-02-08">2017-02-08 scratch game obstacles</a></li>
       <li><a href="2017-04-12">2017-04-12 hopscotch</a></li>
       <li><a href="2017-04-26-hopscotch-square">2017-04-12 hopscotch square</a></li>
+      <li><a href="2017-05-03-hopsotch-crossyroad">2017-05-03-hopsotch-crossyroad</a></li>
+
+
     </ul>
 
     <h2>2015-2016</h2>
