--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
   <body>
     <h1>Stratton Coding Club</h1>
 
+    <h2>2017-2018</h2>
+    <p>
+      The 2017-2018 year again has separate K-2 and 3-5 groups. The first
+      session had both groups combined. These presentations are for the 3-5
+      group.
+    </p>
+    <ul>
+      <li><a href="2017-10-18-introduction">2016-10-18 introduction</a></li>
+    </ul>
+    
     <h2>2016-2017</h2>
     <p>
       The fall of 2016 started with separate K-2 and 3-5 groups. These
