--- a/2017-10-18-introduction/index.html
+++ b/2017-10-18-introduction/index.html
@@ -49,7 +49,7 @@
         <section>
           <h3>next week</h3>
           <h1>3-5</h1>
-          <h2>Faculty Dining Room</h2>
+          <h2>Media Center</h2>
           <h2>spyponders.com login</h2>
         </section>
 
@@ -60,8 +60,8 @@
 
         <section>
           <h1>code</h1>
-          <h2>commands</h2>
-          <h2>things</h2>
+          <h2>gives</h2>
+          <h2>instructions</h2>
         </section>
         
         <section data-background="images/destiny.png" data-style="opacity:0.4;">
@@ -132,7 +132,7 @@
         <section>
           <h3>next week</h3>
           <h1>3-5</h1>
-          <h2>Faculty Dining Room</h2>
+          <h2>Media Center</h2>
           <h2>spyponders.com login</h2>
         </section>
 
