more examples of things with code

--- a/2017-10-18-introduction/index.html
+++ b/2017-10-18-introduction/index.html
@@ -98,10 +98,22 @@
           <img src="images/car.jpg"/>
         </section>
         <section>
+          <img src="images/orange-drone.jpg"/>
+        </section>
+        <section>
+          <img src="images/hubble.jpg"/>
+        </section>
+        <section>
           <img src="images/rover.jpg"/>
         </section>
         <section>
           <img src="images/game-shoes.gif"/>
+        </section>
+        <section>
+          <img src="images/smart-shoes.jpg" width="60%" />
+        </section>
+        <section>
+          <img src="images/scout-traks.jpg"/>
         </section>
 
         <section data-background="images/mumford-hat-off.png" data-background-size="50%" data-background-position="left">
