--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     </p>
     <ul>
       <li><a href="2017-10-18-introduction">2016-10-18 introduction</a></li>
+      <li><a href="2017-10-25-scratch intro">2016-10-25 scratch intro</a></li>
+
     </ul>
-    
+
     <h2>2016-2017</h2>
     <p>
       The fall of 2016 started with separate K-2 and 3-5 groups. These
