--- a/2017-10-25-scratch intro/index.html
+++ b/2017-10-25-scratch intro/index.html
@@ -67,7 +67,7 @@ p.bigUrlText {
 
         <section>
           <h1>Scratch set-up</h1>
-          <h3><ul><li>Click Sign In </li>
+          <h3><ul><li>Click 'Sign In'</li>
             <Li>Username:<br>scc-first initial + lastname</li>
           <li>Example: scc-latkins</li>
           <li>Password: stratton</li></ul>
