--- a/2017-10-25-scratch intro/index.html
+++ b/2017-10-25-scratch intro/index.html
@@ -85,7 +85,7 @@ p.bigUrlText {
        <section>
           <h1>First Project</h1>
           <h3><ul><Li>Click on 'Create'</li>
-          <li>Lets explore the workspace</li>
+          <li>Let's explore the Editor</li>
 
           <li><a href="https://resources.scratch.mit.edu/www/guides/en/Getting-Started-Guide-Scratch2.pdf" target="_new">Getting Started Guide</a></li>
 
