--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       group.
     </p>
     <ul>
-      <li><a href="2017-10-18-introduction">2016-10-18 introduction</a></li>
-      <li><a href="2017-10-25-scratch intro">2016-10-25 scratch intro</a></li>
+      <li><a href="2017-10-18-introduction">2017-10-18 introduction</a></li>
+      <li><a href="2017-10-25-scratch intro">2017-10-25 scratch intro</a></li>
+            <li><a href="2017-11-08-scratch first project">2017-11-08 scratch first project</a></li>
+
 
     </ul>
 
