--- a/2017-11-08-scratch first project/index.html
+++ b/2017-11-08-scratch first project/index.html
@@ -41,18 +41,13 @@ p.bigUrlText {
     <h2>November 8, 2017</h2>
 	</section>
 
- <section>
-          <h1>Ground rules</13>
-          <h2>
-            <ul>
-              <Li>Be respectful & listen</li>
-              <li>Help each other!</li>
-              </ul>
-                </h2>
+
+  <section>
+          <h1>Dance Party!</h1>
         </section>
 
         <section>
-          <h1>Reminder: Chromebooks</h1>
+          <h1>Chromebooks</h1>
           <h2><ul><Li>Login with your spyponders.com account
           </li></h2>
           <h3>
@@ -63,7 +58,7 @@ p.bigUrlText {
 
 
         <section>
-          <h1>Reminder: Scratch</h1>
+          <h1>Scratch</h1>
 
           <h3><ul>
    <li>Go to URL: scratch.mit.edu</li>
@@ -78,11 +73,13 @@ p.bigUrlText {
 
        <section>
           <h1>Dance Project</h1>
-          <h3><ul><Li>Click on 'Create'</li>
+          <h2>
+            Click on 'Tips'
+            <br>
 
-          <li><a href="https://resources.scratch.mit.edu/www/guides/en/Getting-Started-Guide-Scratch2.pdf" target="_new">Follow: Getting Started Guide</a></li>
-
+            <img id="gettingstarted" src="images/gettingstarted.png"/>
         </h2>
+        <h3>Follow the steps</h3>
 
         </section>
 
