--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="2017-10-25-scratch intro">2017-10-25 scratch intro</a></li>
             <li><a href="2017-11-08-scratch first project">2017-11-08 scratch first project</a></li>
 
+            <li><a href="2017-12-06-hide and seek">2017-12-06 hide and seek project</a></li>
 
     </ul>
 
