link to 2018-2019 intro

--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Stratton Coding Club</title>
-    <style>
-      body {
-        font-family: sans-serif;
-        margin: 50px;
-      }
-      li {
-        padding-bottom: 0.5em;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Stratton Coding Club</h1>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Stratton Coding Club</title>
+        <style>
+         body {
+             font-family: sans-serif;
+             margin: 50px;
+         }
+         li {
+             padding-bottom: 0.5em;
+         }
+        </style>
+    </head>
+    <body>
+        <h1>Stratton Coding Club</h1>
 
-    <h2>2017-2018</h2>
-    <p>
-      The 2017-2018 year again has separate K-2 and 3-5 groups. The first
-      session had both groups combined. These presentations are for the 3-5
-      group.
-    </p>
-    <ul>
-      <li><a href="2017-10-18-introduction">2017-10-18 introduction</a></li>
-      <li><a href="2017-10-25-scratch intro">2017-10-25 scratch intro</a></li>
+        <h2>2018-2019</h2>
+        <p>
+            The 2018-2019 year again has separate K-2 and 3-5 groups. The first
+            session had both groups combined. These presentations are for the
+            3-5 group.
+        </p>
+        <ul>
+            <li><a href="2017-10-10-introduction">2017-10-10 introduction</a></li>
+        </ul>
+        
+        <h2>2017-2018</h2>
+        <p>
+            The 2017-2018 year again has separate K-2 and 3-5 groups. The first
+            session had both groups combined. These presentations are for the 3-5
+            group.
+        </p>
+        <ul>
+            <li><a href="2017-10-18-introduction">2017-10-18 introduction</a></li>
+            <li><a href="2017-10-25-scratch intro">2017-10-25 scratch intro</a></li>
             <li><a href="2017-11-08-scratch first project">2017-11-08 scratch first project</a></li>
 
             <li><a href="2017-12-06-hide and seek">2017-12-06 hide and seek project</a></li>
@@ -32,79 +42,79 @@
             <li><a href="2017-12-06-hide and seek">2017-12-06 scratch hide and seek project</a></li>
             <li><a href="2017-12-20-magic">2017-12-20 magic</a></li>
 
-    </ul>
+        </ul>
 
-    <h2>2016-2017</h2>
-    <p>
-      The fall of 2016 started with separate K-2 and 3-5 groups. These
-      presentations are for the K-2 group.
-    </p>
-    <ul>
-      <li><a href="2016-10-19-intro">2016-10-19 intro</a></li>
-      <li><a href="2016-10-26-bees">2016-10-26 bees</a></li>
-      <li><a href="2016-11-02-double-bees">2016-11-02 double bees</a></li>
-      <li><a href="2016-11-09-playlab">2016-11-09 playlab</a></li>
-      <li><a href="2016-11-16-playlab">2016-11-16-playlab</a></li>
-      <li><a href="2016-11-30-minecraft">2016-11-30-minecraft</a></li>
-      <li><a href="2016-12-21-wintery">2016-12-21-wintery</a></li>
-      <li><a href="2017-01-03-scratch">2017-01-03-scratch</a></li>
-      <li><a href="2017-01-11-scratch-disappear">2017-01-11-scratch-disappear</a></li>
-      <li><a href="2017-01-18-scratch-story">2017-01-18-scratch-story</a></li>
-      <li><a href="2017-01-25">2017-01-25 scratch messaging</a></li>
-      <li><a href="2017-02-01">2017-02-01 scratch more messaging game</a></li>
-      <li><a href="2017-02-08">2017-02-08 scratch game obstacles</a></li>
-      <li><a href="2017-04-12">2017-04-12 hopscotch</a></li>
-      <li><a href="2017-04-26-hopscotch-square">2017-04-12 hopscotch square</a></li>
-      <li><a href="2017-05-03-hopsotch-crossyroad">2017-05-03-hopsotch-crossyroad</a></li>
+        <h2>2016-2017</h2>
+        <p>
+            The fall of 2016 started with separate K-2 and 3-5 groups. These
+            presentations are for the K-2 group.
+        </p>
+        <ul>
+            <li><a href="2016-10-19-intro">2016-10-19 intro</a></li>
+            <li><a href="2016-10-26-bees">2016-10-26 bees</a></li>
+            <li><a href="2016-11-02-double-bees">2016-11-02 double bees</a></li>
+            <li><a href="2016-11-09-playlab">2016-11-09 playlab</a></li>
+            <li><a href="2016-11-16-playlab">2016-11-16-playlab</a></li>
+            <li><a href="2016-11-30-minecraft">2016-11-30-minecraft</a></li>
+            <li><a href="2016-12-21-wintery">2016-12-21-wintery</a></li>
+            <li><a href="2017-01-03-scratch">2017-01-03-scratch</a></li>
+            <li><a href="2017-01-11-scratch-disappear">2017-01-11-scratch-disappear</a></li>
+            <li><a href="2017-01-18-scratch-story">2017-01-18-scratch-story</a></li>
+            <li><a href="2017-01-25">2017-01-25 scratch messaging</a></li>
+            <li><a href="2017-02-01">2017-02-01 scratch more messaging game</a></li>
+            <li><a href="2017-02-08">2017-02-08 scratch game obstacles</a></li>
+            <li><a href="2017-04-12">2017-04-12 hopscotch</a></li>
+            <li><a href="2017-04-26-hopscotch-square">2017-04-12 hopscotch square</a></li>
+            <li><a href="2017-05-03-hopsotch-crossyroad">2017-05-03-hopsotch-crossyroad</a></li>
 
 
-    </ul>
+        </ul>
 
-    <h2>2015-2016</h2>
-    <p>
-      In the fall of 2015, we started with every-other-week meetings,
-      alternating between a K-2 group and a 3-5 group (one group of parents
-      teaching both groups). Starting in the winter of 2016, each group
-      started meeting every week (two groups of parents). When we split, I
-      stayed with the K-2 group. This is why there are only 3-5 presentations
-      for the first half of the school year.
-    </p>
-    <ul>
-      <li><a href="2015-10-28-intro">2015-10-28 intro (all)</a></li>
-      <li><a href="2015-11-04">2015-11-04 (k-2) meeting</a></li>
-      <li><a href="2015-11-18">2015-11-18 (3-5) meeting</a></li>
-      <li><a href="2015-11-25">2015-11-25 (k-2) meeting</a></li>
-      <li><a href="2015-12-02">2015-12-02 (3-5) meeting</a></li>
-      <li><a href="2015-12-09">2015-12-09 (k-2) meeting</a></li>
-      <li><a href="2015-12-16">2015-12-16 (3-5) meeting</a></li>
-      <li><a href="2016-01-20-intro">2016-01-20 intro (all new)</a></li>
-      <li><a href="2016-01-27-intro-too">2016-01-20 intro too (all new)</a></li>
-      <li><a href="2016-02-03">2016-02-03 artists</a></li>
-      <li><a href="2016-02-10">2016-02-10 playlab</a></li>
-      <li><a href="2016-02-24">2016-02-24 playlab</a></li>
-      <li><a href="2016-03-02">2016-03-02 loops</a></li>
-      <li><a href="2016-03-09">2016-03-09 loops loops</a></li>
-      <li><a href="2016-03-16">2016-03-16 scratch jr intro</a></li>
-      <li><a href="2016-03-23">2016-03-23 scratch jr show and hide</a></li>
-      <li><a href="2016-03-30">2016-03-30 scratch jr msging</a></li>
-      <li><a href="2016-04-06">2016-04-06 scratch jr multiple msging</a></li>
-      <li><a href="2016-04-13">2016-04-13 scratch jr free play</a></li>
-      <li><a href="2016-04-27">2016-04-27 scratch jr loops</a></li>
-      <li><a href="2016-05-04">2016-05-04 scratch jr animate your name</a></li>
-      <li><a href="2016-03-30">2016-03-30 scratch jr msging</a></li>
-      <li><a href="2016-04-06">2016-04-06 scratch jr multiple msging</a></li>
-      <li><a href="2016-04-13">2016-04-13 scratch jr free play</a></li>
-      <li><a href="2016-04-27">2016-04-27 scratch jr loops</a></li>
-      <li><a href="2016-05-04">2016-05-04 scratch jr animate your name</a></li>
-      <li><a href="2016-05-11">2016-05-11 scratch jr dance party!</a></li>
-      <li><a href="2016-05-18">2016-05-18 scratch jr music</a></li>
-      <li><a href="2016-05-25">2016-05-25 scratch jr relay</a></li>
-    </ul>
+        <h2>2015-2016</h2>
+        <p>
+            In the fall of 2015, we started with every-other-week meetings,
+            alternating between a K-2 group and a 3-5 group (one group of parents
+            teaching both groups). Starting in the winter of 2016, each group
+            started meeting every week (two groups of parents). When we split, I
+            stayed with the K-2 group. This is why there are only 3-5 presentations
+            for the first half of the school year.
+        </p>
+        <ul>
+            <li><a href="2015-10-28-intro">2015-10-28 intro (all)</a></li>
+            <li><a href="2015-11-04">2015-11-04 (k-2) meeting</a></li>
+            <li><a href="2015-11-18">2015-11-18 (3-5) meeting</a></li>
+            <li><a href="2015-11-25">2015-11-25 (k-2) meeting</a></li>
+            <li><a href="2015-12-02">2015-12-02 (3-5) meeting</a></li>
+            <li><a href="2015-12-09">2015-12-09 (k-2) meeting</a></li>
+            <li><a href="2015-12-16">2015-12-16 (3-5) meeting</a></li>
+            <li><a href="2016-01-20-intro">2016-01-20 intro (all new)</a></li>
+            <li><a href="2016-01-27-intro-too">2016-01-20 intro too (all new)</a></li>
+            <li><a href="2016-02-03">2016-02-03 artists</a></li>
+            <li><a href="2016-02-10">2016-02-10 playlab</a></li>
+            <li><a href="2016-02-24">2016-02-24 playlab</a></li>
+            <li><a href="2016-03-02">2016-03-02 loops</a></li>
+            <li><a href="2016-03-09">2016-03-09 loops loops</a></li>
+            <li><a href="2016-03-16">2016-03-16 scratch jr intro</a></li>
+            <li><a href="2016-03-23">2016-03-23 scratch jr show and hide</a></li>
+            <li><a href="2016-03-30">2016-03-30 scratch jr msging</a></li>
+            <li><a href="2016-04-06">2016-04-06 scratch jr multiple msging</a></li>
+            <li><a href="2016-04-13">2016-04-13 scratch jr free play</a></li>
+            <li><a href="2016-04-27">2016-04-27 scratch jr loops</a></li>
+            <li><a href="2016-05-04">2016-05-04 scratch jr animate your name</a></li>
+            <li><a href="2016-03-30">2016-03-30 scratch jr msging</a></li>
+            <li><a href="2016-04-06">2016-04-06 scratch jr multiple msging</a></li>
+            <li><a href="2016-04-13">2016-04-13 scratch jr free play</a></li>
+            <li><a href="2016-04-27">2016-04-27 scratch jr loops</a></li>
+            <li><a href="2016-05-04">2016-05-04 scratch jr animate your name</a></li>
+            <li><a href="2016-05-11">2016-05-11 scratch jr dance party!</a></li>
+            <li><a href="2016-05-18">2016-05-18 scratch jr music</a></li>
+            <li><a href="2016-05-25">2016-05-25 scratch jr relay</a></li>
+        </ul>
 
-    <h2>misc</h2>
-    <ul>
-      <li><a href="resources">resources</a></li>
-      <li><a href="lottery">lottery program</a></li>
-    </ul>
-  </body>
+        <h2>misc</h2>
+        <ul>
+            <li><a href="resources">resources</a></li>
+            <li><a href="lottery">lottery program</a></li>
+        </ul>
+    </body>
 </html>
