final pre-intro edits

--- a/2018-10-10-introduction/index.html
+++ b/2018-10-10-introduction/index.html
@@ -43,7 +43,7 @@
         <section>
           <h3>next week</h3>
           <h1>K-2</h1>
-          <h2>Mrs Forse's classroom</h2>
+          <h2>Ms. Hurley's classroom</h2>
         </section>
 
         <section>
@@ -139,8 +139,8 @@
             style="padding-left: 200px;"
         >
           <h1>Code</h1>
-          <h2>lets you</h2>
-          <h3>make a sandwich!</h3>
+          <h2>lets you give</h2>
+          <h3>directions!</h3>
         </section>
 
         <section
@@ -169,7 +169,7 @@
         <section>
           <h3>next week</h3>
           <h1>K-2</h1>
-          <h2>Mrs Forse's classroom</h2>
+          <h2>Ms. Hurley's classroom</h2>
         </section>
 
         <section>
