add room number

--- a/2018-10-10-introduction/index.html
+++ b/2018-10-10-introduction/index.html
@@ -43,6 +43,7 @@
         <section>
           <h3>next week</h3>
           <h1>K-2</h1>
+          <h2>Room 106</h2>
           <h2>Ms. Hurley's classroom</h2>
         </section>
 
@@ -169,6 +170,7 @@
         <section>
           <h3>next week</h3>
           <h1>K-2</h1>
+          <h2>Room 106</h2>
           <h2>Ms. Hurley's classroom</h2>
         </section>
 
