--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </p>
         <ul>
             <li><a href="2017-10-10-introduction">2017-10-10 introduction</a></li>
+            <li><a href="2017-10-17-scratch-intro">2017-10-17 scratch intro</a></li>
         </ul>
         
         <h2>2017-2018</h2>
