--- a/2019-10-16-introduction/index.html
+++ b/2019-10-16-introduction/index.html
@@ -14,11 +14,11 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-        <link rel="stylesheet" href="../reveal.js-3.8.0/css/reveal.css">
-        <link rel="stylesheet" href="../reveal.js-3.8.0/css/theme/night.css" id="theme">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/reveal.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/theme/night.css" id="theme">
 
         <!-- Code syntax highlighting -->
-        <link rel="stylesheet" href="../reveal.js-3.8.0/lib/css/zenburn.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/lib/css/zenburn.css">
 
         <style>
          section.left {
