link to 2019 introduction

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <body>
         <h1>Stratton Coding Club</h1>
 
+        <h2>2019-2020</h2>
+        <p>
+            The 2019-2020 year again has separate K-2 and 3-5 groups. The first
+            session had both groups combined. These presentations are for the
+            3-5 group.
+        </p>
+        <ul>
+            <li><a href="2019-10-16-introduction">2019-10-16 introduction</a></li>
+        </ul>
+
         <h2>2018-2019</h2>
         <p>
             The 2018-2019 year again has separate K-2 and 3-5 groups. The first
