more details about the crossy library exercise

--- a/2019-10-16-introduction/index.html
+++ b/2019-10-16-introduction/index.html
@@ -175,6 +175,12 @@
                     <h3>directions!</h3>
                 </section>
 
+                <section>
+                    <h2>Crossy Library</h2>
+                    <h1>&#x21E6; &#x21E7; &#x21E8; &#x21E9;</h1>
+                    <h3>Go <em>around</em> obstacles.</h3>
+                </section>
+
                 <section
                     data-background="images/mumford-ta-da.png"
                     data-background-size="50%"
@@ -188,7 +194,7 @@
                     <h3>learn?</h3>
                 </section>
                 
-                <section id="names">
+                <section class="names">
                     <h2>Who can code?</h2>
                     <h1 id="name" style="color: black; font-size: 150px">you.</h1>
                 </section>
