--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </p>
         <ul>
             <li><a href="2019-10-16-introduction">2019-10-16 introduction</a></li>
+            <li><a href="2019-10-23-login">2019-10-23 login</a></li>
         </ul>
 
         <h2>2018-2019</h2>
