--- a/2019-10-23-login/index.html
+++ b/2019-10-23-login/index.html
@@ -64,7 +64,7 @@
                     </div>
                     <div>
                         <img src="images/scratch-cat.png" class="chrome" />
-                        <h2>URL: scratch.mit.edu</h2>
+                        <h2>scratch.mit.edu</h2>
                         <div style="font-size: 1.25em;">
                             Username: scc-first initial + lastname<br>
                             Example: scc-latkins<br>
