--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <ul>
             <li><a href="2019-10-16-introduction">2019-10-16 introduction</a></li>
             <li><a href="2019-10-23-login">2019-10-23 login</a></li>
+            <li><a href="2019-11-26-dance-party">2019-11-26 code.org dance party</a></li>
         </ul>
 
         <h2>2018-2019</h2>
